--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
         </div>
     </div>
 
+    <footer>
+        <div class="container">
+            <button id="report-btn">Report</button>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
