--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <marquee class="marquee">Welcome to Daily Business Snapshot</marquee>
-        <div class="header-controls">
-            <label for="date-picker">Select Date:</label>
-            <input type="date" id="date-picker">
-        </div>
-    </header>
-
     <main>
         <div class="container">
             <h1>Daily Business Snapshot</h1>
+            <div class="header-controls" style="text-align: center; margin-bottom: 20px;">
+                <label for="date-picker">Select Date:</label>
+                <input type="date" id="date-picker">
+            </div>
 
             <table id="data-table">
                 <thead>
