--- a/index.html
+++ b/index.html
@@ -77,14 +77,15 @@
             <button id="close-report-page-btn">Back to Main</button>
             <h2>Saved Reports</h2>
             <div class="report-controls">
-                <input type="text" id="search-by-date" placeholder="Search by Date (DDMMYY)...">
+                <input type="text" id="search-by-date" placeholder="Search by Date (DD-MM-YYYY)...">
                 <input type="text" id="search-by-name" placeholder="Search by Customer Name...">
                 <button id="clear-all-data-btn" class="danger-btn">Clear All Data</button>
                 <button id="download-all-reports-btn">Download All Reports (PDF)</button>
+                <button id="select-all-dates-btn">Select All Dates</button>
             </div>
             <div id="report-main-content">
                 <div id="report-list-panel">
-                    <!-- Date-grouped cards with checkboxes will be dynamically inserted here -->
+                    <!-- Date-grouped cards with checkboxes and animated customer lists will be dynamically inserted here -->
                 </div>
                 <div id="report-preview-panel">
                     <!-- Selected customer details will be shown here -->
